Trying to fix appearance on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 
 body {
     
-    /* width: 100%; */
+    width: 100%;
+    min-width: 800px;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
